z-index issue

--- a/src/components/store.css
+++ b/src/components/store.css
@@ -428,7 +428,7 @@
     box-shadow: 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
     padding: 6px;
     width: 80px; /* smaller by default */
-    z-index: 9999;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
